tests/init_state/move_and_drop/drop_of_uninit.err.expected
error: at 5:13: [INIT-UseBeforeInit] In function 'f', block 'entry': variable 'x' is used before initialization
   |
 5 |             drop x;
   |             ^^^^^^
